--- a/mypicktest/src/main/res/layout/activity_main.xml
+++ b/mypicktest/src/main/res/layout/activity_main.xml
@@ -10,4 +10,11 @@
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:text="toPick" android:onClick="toPick" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:id="@+id/iv_photo"
+        android:layout_centerInParent="true"
+        />
 </RelativeLayout>
