--- a/photopick/src/main/res/layout/dialog_set_photo.xml
+++ b/photopick/src/main/res/layout/dialog_set_photo.xml
@@ -2,41 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:background="@color/white"
-        android:text="@string/take_picture"
-        android:textColor="@color/actionsheet_blue"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:id="@+id/id_set_photo_dailog_take_picture"
-        />
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:text="@string/take_picture"
+            android:textColor="@color/actionsheet_blue"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:id="@+id/id_set_photo_dailog_take_picture"
+            />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/settingSpliteLine"></LinearLayout>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/white"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:text="@string/select_picture"
         android:textColor="@color/actionsheet_blue"
         android:textSize="16sp"
         android:gravity="center"
         android:id="@+id/id_set_photo_dailog_select_picture"/>
+</RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:textColor="@color/actionsheet_blue"
         android:textSize="16sp"
         android:text="@string/cancel"
         android:gravity="center"
         android:id="@+id/id_set_photo_dailog_cancel"/>
+    </RelativeLayout>
+
 </LinearLayout>
